--- a/app/src/main/res/layout/activity_taller_2.xml
+++ b/app/src/main/res/layout/activity_taller_2.xml
@@ -23,6 +23,33 @@
                 android:layout_height="match_parent"
                 android:text="Actividad 2"
                 android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/mostrar_hora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="time"
+                android:hint="@string/formato_hora"
+                android:layout_marginTop="10dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <ImageButton
+                android:id="@+id/btn_hora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="32dp"
+                android:src="@drawable/time"
+                app:layout_constraintHorizontal_bias="0.505"
+                app:layout_constraintLeft_toRightOf="@+id/mostrar_hora"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:ignore="ContentDescription" />
+
+
+
+
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
@@ -38,7 +65,15 @@
                 android:id="@+id/mostrar_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="32dp"
                 android:text=""/>
+
+
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="WebViewLayout"></WebView>
 
         </LinearLayout>
     </ScrollView>
