--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,26 +16,41 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-
-
             <include layout="@layout/toolbar"/>
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            <Button
 
+                android:id="@+id/btn_tema1"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:text="Tema 1"/>
+            <Button
+                android:id="@+id/btn_tema2"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:text="Tema 2"/>
+            <Button
+                android:id="@+id/btn_tema3"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:text="Tema 3"/>
+            <Button
+                android:id="@+id/btn_tema4"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:text="Tema 4"/>
+            <Button
+                android:id="@+id/btn_tema5"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:text="Tema 5"/>
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabLayout"
-                app:tabGravity="fill"
-                app:tabSelectedTextColor="@color/colorTabText"
-                app:tabTextColor="@color/colorTabTextWhiteTransparent"
-                app:tabIndicatorColor="@color/colorTabIndicator"
-                android:background="@color/colorPrimary"
-                app:tabMode="fixed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.design.widget.TabLayout>
-
-
-
+        </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
