--- a/app/src/main/res/layout/activity_taller_1.xml
+++ b/app/src/main/res/layout/activity_taller_1.xml
@@ -13,11 +13,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <include layout="@layout/toolbar"/>
 
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/tv1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
