--- a/app/src/main/res/layout/activity_taller_2.xml
+++ b/app/src/main/res/layout/activity_taller_2.xml
@@ -18,6 +18,7 @@
 
             <include layout="@layout/toolbar"/>
             <TextView
+                android:paddingTop="20dp"
                 android:id="@+id/tv2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
